k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: stetic-services-front
  namespace: demo-danweb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stetic-services-front
  template:
    metadata:
      labels:
        app: stetic-services-front
    spec:
      containers:
        - name: stetic-services-front
          image: williambr2022/stetic-services-front
          ports:
            - containerPort: 80
          imagePullPolicy: Always
