k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts
  namespace: stetic-services
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-stetic-services"
spec:
  tls:
  - hosts:
    - "stetic-services.api-danweb-softwares.click"
    secretName: "stetic-services-tls"
  - hosts:
    - "stetic-services.app-danweb-softwares.click"
    secretName: "stetic-services-front-tls"
  rules:
  - host: stetic-services.api-danweb-softwares.click
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: stetic-services-back-svc
            port: 
              number: 80
  - host: stetic-services.app-danweb-softwares.click
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: stetic-services-front-svc
            port: 
              number: 80
